exports[`mapToFetch should set all params 1`] = `
Array [
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    },
    "value": Object {
      "some": "options",
    },
  },
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    },
    "value": "http://an-url",
  },
  Object {
    "done": true,
    "value": Array [
      "url:url:http://an-url//pathPrams:[\"an\",\"great\",\"array\"]//queryParams:{\"an\":\"object\",\"that\":\"rocks\"}",
      Object {
        "body": Object {
          "a": "body",
          "to": "send",
        },
        "some": "options",
      },
    ],
  },
]
`;

exports[`mapToFetch should set minimum params 1`] = `
Array [
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    },
    "value": Object {
      "some": "options",
    },
  },
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    },
    "value": "http://an-url",
  },
  Object {
    "done": true,
    "value": Array [
      "url:url:http://an-url//pathPrams:undefined//queryParams:undefined",
      Object {
        "body": undefined,
        "some": "options",
      },
    ],
  },
]
`;
